--- a/News/News/Views/Shared/_Layout.cshtml
+++ b/News/News/Views/Shared/_Layout.cshtml
@@ -234,7 +234,7 @@
                     </a>
 
 
-                        @*<span class="breadcrumb-item f1-s-3 cl9">
+                    @*<span class="breadcrumb-item f1-s-3 cl9">
                             Test
                         </span>*@
 
@@ -261,7 +261,7 @@
                     </a>
 
                     <span class="breadcrumb-item f1-s-3 cl9">
-                        Nulla non interdum metus non laoreet nisi tellus eget aliquam lorem pellentesque
+                        @ViewBag.NewsTitle
                     </span>
                 </div>
 
@@ -308,68 +308,14 @@
                         </div>
                     </div>
 
+                    @*----------------------------------------------------------------*@
+
                     <div class="col-sm-6 col-lg-4 p-b-20">
                         <div class="size-h-3 flex-s-c">
                             <h5 class="f1-m-7 cl0">
-                                Popular Posts
+                                
                             </h5>
                         </div>
-
-                        <ul>
-                            <li class="flex-wr-sb-s p-b-20">
-                                <a href="#" class="size-w-4 wrap-pic-w hov1 trans-03">
-                                    <img src="~/images/popular-post-01.jpg" alt="IMG">
-                                </a>
-
-                                <div class="size-w-5">
-                                    <h6 class="p-b-5">
-                                        <a href="#" class="f1-s-5 cl11 hov-cl10 trans-03">
-                                            Donec metus orci, malesuada et lectus vitae
-                                        </a>
-                                    </h6>
-
-                                    <span class="f1-s-3 cl6">
-                                        Feb 17
-                                    </span>
-                                </div>
-                            </li>
-
-                            <li class="flex-wr-sb-s p-b-20">
-                                <a href="#" class="size-w-4 wrap-pic-w hov1 trans-03">
-                                    <img src="~/images/popular-post-02.jpg" alt="IMG">
-                                </a>
-
-                                <div class="size-w-5">
-                                    <h6 class="p-b-5">
-                                        <a href="#" class="f1-s-5 cl11 hov-cl10 trans-03">
-                                            Lorem ipsum dolor sit amet, consectetur
-                                        </a>
-                                    </h6>
-
-                                    <span class="f1-s-3 cl6">
-                                        Feb 16
-                                    </span>
-                                </div>
-                            </li>
-
-                            <li class="flex-wr-sb-s p-b-20">
-                                <a href="#" class="size-w-4 wrap-pic-w hov1 trans-03">
-                                    <img src="~/images/popular-post-03.jpg" alt="IMG">
-                                </a>
-
-                                <div class="size-w-5">
-                                    <h6 class="p-b-5">
-                                        <a href="#" class="f1-s-5 cl11 hov-cl10 trans-03">
-                                            Suspendisse dictum enim quis imperdiet auctor
-                                        </a>
-                                    </h6>
-
-                                    <span class="f1-s-3 cl6">
-                                        Feb 15
-                                    </span>
-                                </div>
-                            </li>
-                        </ul>
                     </div>
 
                     @*Footer Categories*@
@@ -383,11 +329,7 @@
         <div class="bg11">
             <div class="container size-h-4 flex-c-c p-tb-15">
                 <span class="f1-s-1 cl0 txt-center">
-                    Copyright © 2018
-
-                    <a href="#" class="f1-s-1 cl10 hov-link1">
-                        Copyright &copy;
-                        <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="#">MagNews</a>
+                    Copyright © 2022
                 </span>
             </div>
         </div>
