Account Saved post

--- a/News/News/Views/Account/_DashboardNavbar.cshtml
+++ b/News/News/Views/Account/_DashboardNavbar.cshtml
@@ -35,7 +35,7 @@
             <ul>
                 <li class="@(ViewBag.Section == "dashboard"?"active":"")"><a asp-controller="account" asp-action="index"><i class="ti-user"></i>My Profile</a></li>
                 <li class="@(ViewBag.Section == "posts"?"active":"")"><a asp-controller="account" asp-action="posts"><i class="fas fa-blog"></i>News Listings</a></li>
-                <li class="@(ViewBag.Section == "savednews"?"active":"")"><a asp-controller="account" asp-action="savesnews"><i class="ti-bookmark"></i>List of saved news</a></li>
+                <li class="@(ViewBag.Section == "savednews"?"active":"")"><a asp-controller="account" asp-action="savednews"><i class="ti-bookmark"></i>List of saved news</a></li>
                 <li class="@(ViewBag.Section == "postcreate"?"active":"")"><a asp-controller="account" asp-action="postcreate"><i class="ti-pencil-alt"></i>Submit New News</a></li>
                 @if (!userHasPassword)
                 {
