--- a/News/News/Areas/Admin/Views/Social/Index.cshtml
+++ b/News/News/Areas/Admin/Views/Social/Index.cshtml
@@ -8,7 +8,7 @@
         <div class="col-12">
             <div class="card">
                 <div class="card-body">
-                    <h6 class="card-title">Order status</h6>
+                    <h6 class="card-title">Socials</h6>
                     <div class="d-flex table-responsive">
                         <div class="mr-2">
                             <a asp-controller="social" asp-action="createsocial" class="btn btn-info"><i class="mdi mdi-plus-circle-outline"></i> Add</a>
